# md-editor

./: .gitignore  LICENSE  README.md  blog.md  index.html  package-lock.json  package.json  subset_fonts.py  svg2png.cjs  vite.config.ts
scripts/: subset-chars.txt
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.css  Editor.tsx  Preview.css  Preview.tsx  StatusBar.css  StatusBar.tsx  Toolbar.css  Toolbar.tsx
src/context/: ThemeContext.tsx
src/hooks/: useFile.ts
src/lib/: markdown.ts
src/styles/: font-vars.css  fonts.css  global.css
