[package]
name = "md-editer"
version = "0.1.0"
description = "A Markdown editor with GitHub-style preview"
authors = ["shumengya"]
edition = "2021"

[lib]
name = "md_editer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "md-editer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
